--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="" class="cid-rbomXmamsi" id="footer7-6">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="" class="cid-rbomXmamsi" id="footer7-6">
 
     
 
