--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section form1 cid-rbvnIG6eKd" id="form1-i">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section form1 cid-rbvnIG6eKd" id="form1-i">
 
     
 
@@ -63,7 +63,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sFTgegahbhSW1yPbYKCyNi8KYxEhvFB1TUh9CR6kLac5GZwrPepXPmj5zx1oosJkIlHY/Y3oB8ciGQdko6qJ07GmA7ZXTLRTOzEGzn5azVS7TbSzeprH8neFuhiTapKw">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PCFHVj/aPU4kyH/PO5TTtZRpGgpq5aLketY1uIctgAvX4WFOeSJzt27wxBKbj1VNKi02zLFUH4TTNNmH4l1FpwJcTWs3/8cWbCILpRfZhXVPR8Z+TXVWptZ3AFuHxUM=">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
