create github pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><span style="font-weight: normal;"><a href="home.html" class="text-white">
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><span style="font-weight: normal;"><a href="index.html" class="text-white">
                     Iona Robertson Creative</a></span></h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     Portfolio of Work</h3>
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="carousel slide cid-rbw5baHnfD" data-interval="false" id="slider2-x">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="carousel slide cid-rbw5baHnfD" data-interval="false" id="slider2-x">
 
     
     <div class="container content-slider">
