--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="testimonials2 cid-rbvoPBcVim" id="testimonials2-j">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="testimonials2 cid-rbvoPBcVim" id="testimonials2-j">
 
     
 
@@ -55,7 +55,7 @@
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7">
-                       Iona is an Assistant Stage Manager, Scenic Artist and Prop Maker from Sheffield, England. She is currently in her third year of BA Theatre Design and Production at the University of Wales Trinity Saint David in Carmarthen, Wales. She has a variety of experience in different theatre practices, and she has also undertaken work experience at both Sheffield Theatres and the Hay Festival.<br><br>She has just finished working as the Lead Scenic Artist &amp; Set Dresser on <span style="font-style: normal;">Earthquakes in London&nbsp;</span>directed by <span style="font-style: normal;">Ioan Hefin &amp; Keira Sikora.</span><br><br>She is soon to start work as the Assistant Designer &amp; Scenic Artist on both<span style="font-style: normal;"> Spring Awakening </span>directed by<span style="font-style: normal;"> Luke Hereford &amp; Josephine Wilson </span>and<span style="font-style: normal;"> All That I Am </span>directed by<span style="font-style: normal;"> Matthew Holmquist &amp; Lauren Williams.</span></p>
+                       Iona is an Assistant Stage Manager, Scenic Artist and Prop Maker from Sheffield, England. She has just graduated with a degree in BA Theatre Design and Production from the University of Wales Trinity Saint David in Carmarthen, Wales. She has a variety of experience in different theatre practices, and she has also undertaken work experience at both Sheffield Theatres and the Hay Festival.<br><br>At the beginning of the year she worked as the Lead Scenic Artist &amp; Set Dresser on <span style="font-style: normal;">Earthquakes in London&nbsp;</span>directed by <span style="font-style: normal;">Ioan Hefin &amp; Keira Sikora.</span><br><br>She has just finished working as the Assistant Designer &amp; Scenic Artist and Prop Sourcer on both<span style="font-style: normal;"> Spring Awakening </span>directed by<span style="font-style: normal;"> Luke Hereford &amp; Josephine Wilson </span>and<span style="font-style: normal;"> All That I Am </span>directed by<span style="font-style: normal;"> Matthew Holmquist &amp; Lauren Williams.</span></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
                        Iona Robertson&nbsp;</p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white-outline display-4" href="assets/files/Iona%20Robertson%20Theatre%20CV.pdf" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>CV</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white-outline display-4" href="assets/files/Iona%20Robertson%20Creative%20CV.pdf" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>CV</a></div>
             </div>
         </div>
     </div>
