create github pages

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="testimonials2 cid-rbvoPBcVim" id="testimonials2-j">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="testimonials2 cid-rbvoPBcVim" id="testimonials2-j">
 
     
 
