--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="testimonials2 cid-rbvoPBcVim" id="testimonials2-j">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="testimonials2 cid-rbvoPBcVim" id="testimonials2-j">
 
     
 
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white-outline display-4" href="assets/files/Iona%20Robertson%20Creative%20CV.pdf" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>CV</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white-outline display-4" href="assets/files/Iona Robertson Theatre CV.pdf" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>CV</a></div>
             </div>
         </div>
     </div>
